# voice-dictation

./: .gitignore  CLAUDE.md  build.py  pyproject.toml  requirements.txt  run.py  voice_dictation.spec
.agent/: README.md
.agent/sop/deployment/: packaging.md
.agent/sop/development/: local_setup.md
.agent/specs/SPEC001-voice-dictation/: additional-diagrams.md  architecture.md  delivery-strategy.md  requirements.md  ux-prototype.md
.agent/system/architecture/: low_latency.md  overview.md
hooks/: hook-ctranslate2.py  pyi_rth_faster_whisper.py
voice_dictation/: __init__.py  __main__.py  audio.py  output.py  processor.py  transcriber.py  vad.py
