[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voice-dictation"
version = "0.1.0"
description = "Real-time local voice dictation using Whisper on GPU"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Install torch + torchaudio separately with CUDA support (RTX 5090 / Blackwell):
#   pip install --pre torch torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128
cuda = ["torch>=2.0", "torchaudio>=2.0"]

[project.scripts]
voice-dictation = "voice_dictation.__main__:main"

[tool.setuptools.packages.find]
include = ["voice_dictation*"]
